add a discussion form

--- a/lineman/app/templates/discussion.haml
+++ b/lineman/app/templates/discussion.haml
@@ -18,7 +18,7 @@
           .thread-actions-and-meta
             %a{href: '#', translate: 'common.action.reply'}>
             ·
-            %a{href: '#', translate: 'common.action.edit'}>
+            %a{href: '#', translate: 'common.action.edit', ng-click: 'editDiscussion()'}>
             ·
             %timeago{timestamp: '::discussion.createdAt' }>
             ·
