--- a/lineman/app/templates/add_comment.haml
+++ b/lineman/app/templates/add_comment.haml
@@ -1,5 +1,5 @@
 .add-comment.media
-  .pull-left
+  .media-left
     %img{src: 'http://placehold.it/40x40'}
   .media-body
     .card-row.fake{ng-hide: 'isExpanded'}
