--- a/lineman/app/templates/discussion_items/new_motion.haml
+++ b/lineman/app/templates/discussion_items/new_motion.haml
@@ -1,7 +1,7 @@
 .thread-event.thread-vote{ng-controller: 'NewProposalItemController'}
   .thread-event-header.media
-    .pull-left
-      proposal-icon
+    .media-left
+      .thread-event-proposal-icon
     .media-body
       %span{translate: "new_proposal_item.author_created_proposal", translate-value-name: '{{proposal.authorName()}}'}
   .thread-event-body
