--- a/lineman/app/templates/discussion_items/new_vote.haml
+++ b/lineman/app/templates/discussion_items/new_vote.haml
@@ -1,6 +1,7 @@
 .thread-event.thread-vote{ng-controller: 'NewVoteItemController'}
   .thread-event-header.media
-    .pull-left.thread-event-vote-icon{class: 'thread-event-vote-icon-{{vote.position}}'}
+    .media-left
+      .thread-event-vote-icon{class: 'thread-event-vote-icon-{{vote.position}}'}
     .media-body
       %span{ng-hide: 'vote.hasStatement()', translate: "new_vote_item.{{vote.positionVerb()}}", translate-value-name: '{{vote.authorName()}}'}
       %span{ng-show: 'vote.hasStatement()', translate: "new_vote_item.{{vote.positionVerb()}}_and_why", translate-value-name: '{{vote.authorName()}}'}
