--- a/lineman/app/css/layout.scss
+++ b/lineman/app/css/layout.scss
@@ -21,7 +21,6 @@ main{
 }
 
 .loomio-nav {
-  color: $navbarGrey;
   margin-top: 7px;
 }
 
@@ -37,7 +36,10 @@ main{
 }
 
 .loomio-nav-items i{
-  font-size: 40px;
+  color: $navbarGrey;
+  font-size: 24px;
+  line-height: 34px;
+  padding: 0 20px;
 }
 
 .loomio-nav-logo {
@@ -70,6 +72,7 @@ main{
   }
   border-top: 1px solid #ddd;
   padding: 15px;
+  width: 100%;
 }
 
 .drawer-item-proposal {
