--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -7,7 +7,7 @@
           %a.navbar-btn.dropdown-toggle
             %i.fa.fa-lg.fa-fw.fa-inbox
             %span.hide Inbox
-          .dropdown-menu{role: 'menu'}
+          .loomio-nav-dropdown.dropdown-menu{role: 'menu'}
             %inbox{ng-if: 'inboxIsOpen'}
         %li
           %a.navbar-btn
