--- a/lineman/app/templates/proposal_card.haml
+++ b/lineman/app/templates/proposal_card.haml
@@ -28,7 +28,8 @@
 
     -#.proposal-card-vote.media{ng_repeat: 'vote in curatedVotes()'}
     .proposal-card-vote.media{ng_repeat: 'vote in curatedVotes()'}
-      .media-left.thread-event-vote-icon{class: 'thread-event-vote-icon-{{vote.position}}'}
+      .media-left
+        .thread-event-vote-icon{class: 'thread-event-vote-icon-{{vote.position}}'}
       .media-body
         %strong> {{::vote.authorName()}}
         %span.author-statement {{:: vote.statement }}
