--- a/lineman/app/pages/index.haml
+++ b/lineman/app/pages/index.haml
@@ -12,10 +12,14 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  %body
-    %navbar
+  %body.open-sidebar
 
+    %sidebar#sidebar
+      %inbox
+
+    %navbar
     %main{ng_view: ''}
+
 
     %script{src: '/js/app.js', type: 'text/javascript'}
     %script{src: 'http://localhost:9292/faye/client.js', type: 'text/javascript'}
