--- a/lineman/app/css/layout.scss
+++ b/lineman/app/css/layout.scss
@@ -6,10 +6,100 @@ $navbarGrey: #CCC;
   border-radius: 5px;
 }
 
-
+#header{
+  z-index: 1000;
+  background: white;
+  height: 48px;
+  border-bottom: 1px solid #bbb;
+  box-shadow: 0 0 10px #aaa;
+  width: 100%;
+  position: fixed;
+}
+.container{
+  max-width: $container-max-width;
+}
+.sidebar-is-open .container{
+  max-width: $expanded-container-max-width;
+}
+.sidebar-is-open #header .container{
+  margin-left: 0;
+}
 #sidebar{
-  width: 320px;
+  width: $sidebar-width;
   float: left;
+}
+main{
+  padding-top: 54px;
+  z-index: 0;
+}
+.sidebar-is-open main{
+  max-width: 720px;
+  float: left;
+}
+.sidebar-is-open main .container{
+  padding-left: 330px;
+}
+
+
+.loomio-nav {
+  position: relative;
+}
+.loomio-nav-items{
+  float: left;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  text-align: center;
+}
+.loomio-nav-items li{
+  float: left;
+}
+a.loomio-nav-btn{
+  width: 40px;
+  height: 40px;
+  margin: 4px;
+  display: block;
+}
+.loomio-nav-items i{
+  color: $navbarGrey;
+  font-size: 26px;
+  line-height: 40px;
+}
+.loomio-nav-logo {
+  width: 40px;
+  height: 40px;
+  float: left;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url(/img/lbow_round_34.png);
+}
+.loomio-nav-dropdown{
+  top: 46px;
+  margin: 0 -10px;
+  min-width: 320px;
+  @media (min-width: $screen-xs-min){
+    margin: 0;
+    width: 320px;
+  }
+}
+.loomio-nav-btn.has-badge{
+  position: relative;
+}
+.loomio-nav-btn.has-badge .badge{
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: #4A90E2;
+}
+
+
+.drawer {
+  list-style-type: none;
+  padding: 0;
+  height: 600px;
+  overflow-y:scroll;
+  width: 100%;
 }
 #sidebar .drawer{
  height: 100%;
@@ -19,79 +109,9 @@ $navbarGrey: #CCC;
  background: white;
  border-right: 1px solid $thread-border-color;
 }
-#header{
-  z-index: 1000;
-  background: white;
-  height: 44px;
-  border-bottom: 1px solid #bbb;
-  box-shadow: 0 0 10px #aaa;
-}
-.open-sidebar #header{
-  position: fixed;
-  float: left;
-  margin-left: 320px;
-}
-main{
+#sidebar .drawer{
   padding-top: 54px;
-  z-index: 0;
 }
-.open-sidebar main{
-  width: 720px;
-  float: left;
-}
-.open-sidebar main .container{
-  padding-left: 330px;
-}
-
-.loomio-nav {
-  margin-top: 7px;
-  position: relative;
-}
-
-.loomio-nav-dropdown{
-  top: 34px;
-  margin: 0 -10px;
-  min-width: 320px;
-  @media (min-width: $screen-xs-min){
-    margin: 0;
-    width: 320px;
-  }
-}
-
-.loomio-nav-items{
-  float: left;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.loomio-nav-items li{
-  float: left;
-}
-
-.loomio-nav-items i{
-  color: $navbarGrey;
-  font-size: 24px;
-  line-height: 34px;
-  padding: 0 20px;
-}
-
-.loomio-nav-logo {
-  width: 30px;
-  height: 30px;
-  float: left;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-image: url(/img/lbow_square_30.png);
-}
-
-.drawer {
-  list-style-type: none;
-  padding: 0;
-  height: 600px;
-  overflow-y:scroll;
-}
-
 .drawer-header {
   padding: 0 15px;
 }
@@ -103,7 +123,13 @@ main{
   padding: 15px;
   width: 100%;
 }
-
+.drawer-item.is-active{
+  background-color: $item-highlight-color;
+  border-left: 4px solid $loomio-orange;
+}
+.drawer-item.is-read{
+  background-color: $light-grey;
+}
 .drawer-item-proposal {
   margin: 5px 0;
   .time-left {
@@ -112,14 +138,15 @@ main{
     @include fontSmall;
   }
 }
-
 .drawer-item-discussion-title {
   color: $text-color;
   @include fontHelvetica;
   @include fontMedium;
   margin-bottom: 5px;
 }
-
+.is-unread .drawer-item-discussion-title{
+  font-weight: bold;
+}
 a .drawer-item-proposal-details {
   color: $meta-text-color;
   @include fontHelvetica;
@@ -127,9 +154,9 @@ a .drawer-item-proposal-details {
   margin-bottom: 5px;
   line-height: 16px;
 }
-
 .drawer-item-group-name {
   color: $meta-text-color;
   @include fontHelvetica;
   @include fontSmall;
 }
+
