--- a/app/views/comments/edit.html.haml
+++ b/app/views/comments/edit.html.haml
@@ -5,3 +5,8 @@
       = simple_form_for @comment do |f|
         =f.input :body, label: false, input_html: {class: 'js-warn-before-navigating-away'}
         =f.submit t(:update), class: "btn btn-info"
+        .markdown-label.pull-right
+          = check_box_tag 'comment[uses_markdown]', 1, @comment.uses_markdown
+          = label_tag :uses_markdown, 'Markdown'
+          = surround '(', ')' do
+            = link_to 'Help', "https://help.github.com/articles/markdown-basics/", title: t(:'common.markdown_help_tooltip'), class: 'js-tooltip-left', target: '_blank'
