--- a/lineman/app/templates/discussion_form.haml
+++ b/lineman/app/templates/discussion_form.haml
@@ -1,10 +1,10 @@
 %form{name: 'discussionForm', ng_submit: 'submit()'}
   .modal-header
-    %button{type: 'button', class: 'close', ng-click: 'cancel()'}
+    %button{type: 'button', class: 'close', ng-click: 'cancel($event)'}
       %span{aria-hidden: true} &times;
       %span.sr-only{translate: 'common.action.cancel'}
-    %h1.modal-title{translate: 'discussion_form.new_discussion_title', ng-if: 'discussion.isNew()'}
-    %h1.modal-title{translate: 'discussion_form.edit_discussion_title', ng-unless: 'discussion.isNew()'}
+    %h1.modal-title{translate: 'discussion_form.new_discussion_title', ng_show: 'discussion.isNew()'}
+    %h1.modal-title{translate: 'discussion_form.edit_discussion_title', ng_hide: 'discussion.isNew()'}
 
   .modal-body
     .form-group
@@ -19,6 +19,6 @@
       privacy here
 
   .modal-footer
-    %button.btn.btn-primary{type: 'submit', translate: 'discussion_form.start_discussion_submit', ng-if: 'discussion.isNew()' }
-    %button.btn.btn-primary{type: 'submit', translate: 'discussion_form.edit_discussion_submit', ng-unless: 'discussion.isNew()' }
+    %button.btn.btn-primary{type: 'submit', translate: 'discussion_form.new_discussion_submit', ng_show: 'discussion.isNew()' }
+    %button.btn.btn-primary{type: 'submit', translate: 'discussion_form.edit_discussion_submit', ng_hide: 'discussion.isNew()' }
     %button.btn.btn-warning{ng-click: 'cancel($event)', translate: 'common.action.cancel'}
