Add new discussion form to navbar

--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -17,6 +17,9 @@
           %a.loomio-nav-btn{href: '#'}
             %i.fa.fa-lg.fa-fw.fa-search
         %li.pull-right
+          %a.loomio-nav-btn.btn-success.img-rounded{href: '#', ng-click: 'openDiscussionForm()'}
+            %i.fa.fa-lg.fa-fw.fa-plus
+        %li.pull-right
           %a.loomio-nav-btn{href: '#'}
             %i.fa.fa-lg.fa-fw.fa-navicon
         %li.pull-right
