--- a/lineman/app/templates/discussion_form.haml
+++ b/lineman/app/templates/discussion_form.haml
@@ -7,6 +7,9 @@
     %h1.modal-title{translate: 'discussion_form.edit_discussion_title', ng_hide: 'discussion.isNew()'}
 
   .modal-body
+
+    .thread-helptext{translate: 'discussion_form.discussion_helptext', ng_show: 'discussion.isNew()'}  
+
     .form-group
       %label{for: 'discussion-group-field', translate: 'discussion_form.group_label'}
       %select.form-control{ng-model: 'discussion.groupId', ng-required: 'true' ng-options: 'group.id as group.name for group in availableGroups()', ng-change: 'setCurrentPrivacy()'}
@@ -25,19 +28,22 @@
           .privacy-form-option
             %input{type: 'radio', ng-model: 'private', value: 'true'}
             %label{translate: 'common.state.public' }
+            %span{translate: 'discussion_form.privacy.will_be_public'}
           .privacy-form-option
             %input{type: 'radio', ng-model: 'private', value: 'false'}
-            %label{translate: 'common.state.private'} 
+            %label{translate: 'common.state.private'}
+            %span{ng_show: 'discussion.group().isVisibleToParentMembers', translate: '{{discussion_form.privacy.will_be_private_to_parent_group}}', translate-value-group-name: 'discussion.groupName()', translate-value-parent-group-name: '{{discussion.group().parentName()}}'}
+            %span{ng_hide: 'discussion.group().isVisibleToParentMembers', translate: 'discussion_form.privacy.will_be_private_to_group', translate-value-group-name: '{{discussion.groupName()}}'}
         .privacy-notice{ng_hide: 'showPrivacyForm()'}
           .public-discussion{ng_hide: 'discussion.private'}
             %i.fa.fa-globe
             %strong{translate: 'common.state.public'}
-            IS PUBLIC
+            %span{translate: 'discussion_form.privacy.will_be_public'}
           .private-discussion{ng_show: 'discussion.private'}
             %i.fa.fa-lock
             %strong{translate: 'common.state.private'}
-            IS PRIVATE
-
+            %span{ng_show: 'discussion.group().isVisibleToParentMembers', translate: 'discussion_form.privacy.will_be_private_to_parent_group', translate-value-group-name: '{{::discussion.groupName()}}', translate-value-parent-group-name: '{{discussion.group().parentName()}}'}
+            %span{ng_hide: 'discussion.group().isVisibleToParentMembers', translate: 'discussion_form.privacy.will_be_private_to_group', translate-value-group-name: '{{discussion.groupName()}}'}
   .modal-footer
     %button.btn.btn-primary{type: 'submit', translate: 'discussion_form.new_discussion_submit', ng_show: 'discussion.isNew()' }
     %button.btn.btn-primary{type: 'submit', translate: 'discussion_form.edit_discussion_submit', ng_hide: 'discussion.isNew()' }
