--- a/lineman/app/templates/group.haml
+++ b/lineman/app/templates/group.haml
@@ -1,19 +1,21 @@
 .container
   .row
     .col-xs-12
-      .group-container
-        .group-cover
-        .group-name
-          %h1 {{group.name}}
-        .group-description
-          %h2 {{ 'group.description' | translate }}
-          .group-description{btf-markdown: 'group.description' }
-        .group-threads
-          %h2 {{ 'group.discussions' | translate }}
+      .group-page-container
+        .group-page-header
+          .group-page-cover
+          .group-page-logo
+          .group-page-name
+            %h1 {{group.name}}
+        .group-page-description
+          %h3{ translate: 'group_page.description' }
+          .group-description{ btf-markdown: 'group.description' }
+        .group-page-threads
+          %h3{ translate: 'group_page.discussions' }
           %discussions{group: 'group'}
-        .group-members
-          %h2 {{ 'group.members' | translate }}
+        .group-page-members
+          %h3{ translate: 'group_page.members' }
           %members{group: 'group'}
-        .group-subgroups
-          %h2 {{ 'group.subgroups' | translate }}
+        .group-page-subgroups
+          %h3{ translate: 'group_page.subgroups' }
           %subgroups{group: 'group'}
