--- a/lineman/app/css/layout.scss
+++ b/lineman/app/css/layout.scss
@@ -65,6 +65,7 @@ a.loomio-nav-btn{
   color: $navbarGrey;
   font-size: 26px;
   line-height: 40px;
+  text-shadow: 0px 1px #888;
 }
 .loomio-nav-logo {
   width: 40px;
