--- a/lineman/app/templates/group.haml
+++ b/lineman/app/templates/group.haml
@@ -9,7 +9,7 @@
             %h1 {{group.name}}
         .group-page-description
           %h3{ translate: 'group_page.description' }
-          .group-description{ btf-markdown: 'group.description' }
+          .group-description.card-strip-margin{ btf-markdown: 'group.description' }
         .group-page-threads
           %h3{ translate: 'group_page.discussions' }
           %discussions{group: 'group'}
