--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -22,3 +22,6 @@
         %li.pull-right
           %a.loomio-nav-btn{href: '#'}
             %i.fa.fa-lg.fa-fw.fa-bell
+        %li.pull-right
+          %a.loomio-nav-btn{href: '#'}
+            %i.fa.fa-lg.fa-fw.fa-plus
