--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -64,6 +64,28 @@ $expanded-container-max-width: $thread-max-width + $sidebar-width + 10px;
   h3 {
     margin: 0 0 5px 0;
   }
+  .card-minor-action{
+    margin: 10px 0 0 0;
+  }
+  .card-strip-margin{
+    /* utility class to use when you want to fix up
+       the margins on your card, e.g. if the last
+       element in the card is a paragraph */
+    margin-bottom: -10px;
+  }
+}
+
+.avatar-initials{
+  width: 30px;
+  height: 30px;
+  background: $thread-border-color;
+  border: 1px solid #aaa;
+  text-align: center;
+  line-height: 30px;
+}
+.avatar-image img{
+  width: 30px;
+  height: 30px;
 }
 
 @import 'base';
