--- a/lineman/app/pages/index.haml
+++ b/lineman/app/pages/index.haml
@@ -12,13 +12,13 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  %body.sidebar-is-not-open
+  %body.sidebar-is-open
 
     %navbar
 
     / only load this if the sidebar is open
-    / %sidebar#sidebar
-    /   %inbox
+    %sidebar#sidebar
+      %inbox
 
     %main{ng_view: ''}
 
