--- a/lineman/app/css/group_page.scss
+++ b/lineman/app/css/group_page.scss
@@ -6,7 +6,7 @@
 .group-page-cover{
   width: $thread-max-width;
   height: 100px;
-  background: url('http://placehold.it/500x100') no-repeat;
+  background: url('http://placehold.it/640x100') no-repeat;
 }
 .group-page-logo{
   width: 108px;
@@ -17,8 +17,11 @@
   background: url('http://placehold.it/100x100');
   border: 4px solid #fff;
 }
-.group-page-name{
+.group-page-name, .group-page-privacy{
   margin-left: 128px;
+  margin-top: 10px;
+}
+.group-page-buttons{
   margin-top: 10px;
 }
 .group-page-description,
@@ -38,6 +41,17 @@
   .media:first-child{
     margin-top: 10px;
   }
+}
+.group-thread-list-item{
+  border-bottom: 1px solid $thread-border-color;
+  min-height: 48px;
+  padding: 4px 0;
+}
+.group-thread-list-group-name, .group-thread-list-time{
+  @include metaText;
+}
+.group-thread-list-time .time-and-icon{
+  padding-top: 10px;
 }
 .group-page-subgroups{
   .subgroup-logo{
