--- a/lineman/app/templates/discussions.haml
+++ b/lineman/app/templates/discussions.haml
@@ -1,6 +1,14 @@
-.group-page-discussions
-  .discussion{ng_repeat: 'discussion in group.discussions()'}
-    {{ discussion.title }}
+.group-thread-list
+  .group-thread-list-item{ng_repeat: 'discussion in group.discussions()'}
+    .time-and-icon.pull-right
+      %timeago.group-thread-list-time{timestamp: 'discussion.lastActivityAt' }>
+      %span.group-thread-list-icon
+        %i.fa.fa-lg.fa-comments
+
+    .group-thread-list-thread-title {{ discussion.title }}
+    /should be discussion.group.name but not sure how to make it go
+    .group-thread-list-group-name {{ group.name }}
+
   .discussions-show-more.card-minor-action
     %a{ng-hide: 'lastPage', ng-click: 'getNextPage()', href: '#', translate: 'common.action.show_more'}
   .discussions-new-thread
